; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/mux/extr_anim_encode.c_FrameToFullCanvas.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/mux/extr_anim_encode.c_FrameToFullCanvas.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32, %struct.TYPE_9__, i32, i32 }
%struct.TYPE_9__ = type { i64 }
%struct.TYPE_10__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_11__*, i32*, i32*)* @FrameToFullCanvas to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @FrameToFullCanvas(%struct.TYPE_11__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_11__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_10__, align 8
  %10 = alloca %struct.TYPE_10__, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %11, i32 0, i32 3
  store i32* %12, i32** %8, align 8
  %13 = call i32 @WebPMemoryWriterInit(%struct.TYPE_10__* %9)
  %14 = call i32 @WebPMemoryWriterInit(%struct.TYPE_10__* %10)
  %15 = load i32*, i32** %6, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @DecodeFrameOntoCanvas(i32* %15, i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %3
  br label %56

20:                                               ; preds = %3
  %21 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %21, i32 0, i32 2
  %23 = load i32*, i32** %8, align 8
  %24 = call i32 @EncodeFrame(i32* %22, i32* %23, %struct.TYPE_10__* %9)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %27, label %26

26:                                               ; preds = %20
  br label %56

27:                                               ; preds = %20
  %28 = load i32*, i32** %7, align 8
  %29 = call i32 @GetEncodedData(%struct.TYPE_10__* %9, i32* %28)
  %30 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %31 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %30, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %55

35:                                               ; preds = %27
  %36 = load %struct.TYPE_11__*, %struct.TYPE_11__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %36, i32 0, i32 0
  %38 = load i32*, i32** %8, align 8
  %39 = call i32 @EncodeFrame(i32* %37, i32* %38, %struct.TYPE_10__* %10)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %42, label %41

41:                                               ; preds = %35
  br label %56

42:                                               ; preds = %35
  %43 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %10, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %9, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = icmp slt i64 %44, %46
  br i1 %47, label %48, label %52

48:                                               ; preds = %42
  %49 = load i32*, i32** %7, align 8
  %50 = call i32 @GetEncodedData(%struct.TYPE_10__* %10, i32* %49)
  %51 = call i32 @WebPMemoryWriterClear(%struct.TYPE_10__* %9)
  br label %54

52:                                               ; preds = %42
  %53 = call i32 @WebPMemoryWriterClear(%struct.TYPE_10__* %10)
  br label %54

54:                                               ; preds = %52, %48
  br label %55

55:                                               ; preds = %54, %27
  store i32 1, i32* %4, align 4
  br label %59

56:                                               ; preds = %41, %26, %19
  %57 = call i32 @WebPMemoryWriterClear(%struct.TYPE_10__* %9)
  %58 = call i32 @WebPMemoryWriterClear(%struct.TYPE_10__* %10)
  store i32 0, i32* %4, align 4
  br label %59

59:                                               ; preds = %56, %55
  %60 = load i32, i32* %4, align 4
  ret i32 %60
}

declare dso_local i32 @WebPMemoryWriterInit(%struct.TYPE_10__*) #1

declare dso_local i32 @DecodeFrameOntoCanvas(i32*, i32*) #1

declare dso_local i32 @EncodeFrame(i32*, i32*, %struct.TYPE_10__*) #1

declare dso_local i32 @GetEncodedData(%struct.TYPE_10__*, i32*) #1

declare dso_local i32 @WebPMemoryWriterClear(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
